src/main.css
/* ... */
/* buttons */
[class*="collectibleInfoContainer"] [class*="button"] {
    border-radius: 15px;
}

[class*="collectibleInfoContainer"] [class*="button"] [class*="content"] {
    scale: 120%;
}

/* Price */
[class*="collectibleInfoContainer"] [aria-label="Nitro exclusive"] {
    display: none;
}

[class*="collectibleInfoContainer"] [class*="priceTag"] {
    scale: 1.5;
    margin-left: 14px;
}

[class*="collectibleInfoContainer"] [class*="dimmed"] {
    display: none;
}

[id*="shop-item"] {
	border: none;
}


[src*="/assets/932c1e865521c714498b.png"] {
	content: url(https://raw.githubusercontent.com/TrellTrell/Shop-Tweaks-Reimagined/main/assets/StellaDynamicBannerProfile.png);
}
[src*="/assets/112b94efbfb960f1c9a3.png"] {
	display: none;
}
[src*="/assets/ddae8511cce6b7dec07f.png"] {
	content: url(https://raw.githubusercontent.com/TrellTrell/Shop-Tweaks-Reimagined/main/assets/DTACatDynamicBannerProfile.png);
}


[class*="shop"] [class*="shopCard"]:has([aria-label="Close"]) [type="button"]:not([aria-label="Close"]) {
    background-image: linear-gradient(90deg, rgb(5, 129, 75), rgb(5, 129, 75));
    border-radius: 10px;
    color: white;
}
[class*="shop"] [class*="shopCard"]:has([aria-label="Close"]) [class*="cardBackground"] {
    opacity: 0.7;
	background-color: rgb(0, 0, 0);
}
[class*="shop"] [class*="shopCard"]:has([aria-label="Close"]) [class*="defaultColor"] {
	color: white;
}

/*Popular Picks*/
[class*="popularPicks"] [id*="shop-item"] {
	background-image: linear-gradient(rgb(70, 125, 255), rgb(21, 78, 207));
	--chat-border: rgb(68, 199, 255);
	border: solid 2px;
}
[class*="popularPicks"] [type="button"]:not([aria-label="Close"]) {
	background-image: linear-gradient(90deg, rgb(68, 199, 255), rgb(0, 157, 255));
	color: black;
}
[class*="popularPicks"] [type="button"]:has([class*="giftButtonInner"]) {
	background-image: linear-gradient(90deg, rgb(0, 157, 255), rgb(0, 157, 255));
	color: black;
}

/*Fark Fantasy*/
[class*="categoryWrapper"]:has([id*="shop-item-1256321669388308601"]) [id*="shop-item"] {
	background-image: linear-gradient(rgb(8, 27, 58), rgb(33, 20, 82));
	--chat-border: rgb(21, 24, 71);
	border: solid 2px;
}
[class*="categoryWrapper"]:has([id*="shop-item-1256321669388308601"]) [type="button"]:not([aria-label="Close"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="categoryWrapper"]:has([id*="shop-item-1256321669388308601"]) [type="button"]:has([class*="giftButtonInner"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1256321669388308596.png"]) [class*="collectibleInfo"] {
	background-image: linear-gradient(rgb(8, 27, 58), rgb(33, 20, 82));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1256321669388308596.png"]) [class*="collectibleInfo"] [type="button"] {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1256321669388308596.png"]) [class*="collectibleInfo"] [type="button"]:has([class*="giftButtonInner"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}

/*Tide*/
[class*="categoryWrapper"]:has([id*="shop-item-1252404745977462836"]) [id*="shop-item"] {
	background-image: linear-gradient(rgb(3, 2, 34), rgb(8, 1, 45));
	--chat-border: rgb(6, 2, 39);
	border: solid 2px;
}
[class*="categoryWrapper"]:has([id*="shop-item-1252404745977462836"]) [type="button"]:not([aria-label="Close"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="categoryWrapper"]:has([id*="shop-item-1252404745977462836"]) [type="button"]:has([class*="giftButtonInner"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1252404115686948925.png"]) [class*="collectibleInfo"] {
	background-image: linear-gradient(rgb(3, 2, 34), rgb(8, 1, 45));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1252404115686948925.png"]) [class*="collectibleInfo"] [type="button"] {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1252404115686948925.png"]) [class*="collectibleInfo"] [type="button"]:has([class*="giftButtonInner"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}

/*Arcade*/
[class*="categoryWrapper"]:has([id*="shop-item-1245087661316898877"]) [id*="shop-item"] {
	background-image: linear-gradient(rgb(3, 2, 36), rgb(8, 1, 43));
	--chat-border: rgb(6, 2, 39);
	border: solid 2px;
}
[class*="categoryWrapper"]:has([id*="shop-item-1245087661316898877"]) [type="button"]:not([aria-label="Close"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="categoryWrapper"]:has([id*="shop-item-1245087661316898877"]) [type="button"]:has([class*="giftButtonInner"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1245086730785390793.png"]) [class*="collectibleInfo"] {
	background-image: linear-gradient(rgb(3, 2, 36), rgb(8, 1, 43));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1245086730785390793.png"]) [class*="collectibleInfo"] [type="button"] {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
[class*="modal"]:has([src*="https://cdn.discordapp.com/app-assets/1096190356233670716/1245086730785390793.png"]) [class*="collectibleInfo"] [type="button"]:has([class*="giftButtonInner"]) {
	background-image: linear-gradient(90deg, rgb(89, 102, 243), rgb(89, 102, 243));
}
/* ... */

